// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ciceromark <-> html converts acceptance.json to and from CiceroMark 1`] = `
"<html>
<body>
<div class=\\"document\\">
<h1>Heading</h1>
<p>And below is a <strong>clause</strong>.</p>
<div class=\\"clause\\" name=\\"deliveryClause\\" elementType=\\"org.accordproject.acceptanceofdelivery.AcceptanceOfDeliveryClause\\">
<h2>Acceptance of Delivery.</h2>
<p><span class=\\"variable\\" name=\\"shipper\\" elementType=\\"org.accordproject.organization.Organization\\" identifiedBy=\\"identifier\\">\\"Party A\\"</span> will be deemed to have completed its delivery obligations
if in <span class=\\"variable\\" name=\\"receiver\\" elementType=\\"org.accordproject.organization.Organization\\" identifiedBy=\\"identifier\\">\\"Party B\\"</span>'s opinion, the <span class=\\"variable\\" name=\\"deliverable\\" elementType=\\"String\\">\\"Widgets\\"</span> satisfies the
Acceptance Criteria, and <span class=\\"variable\\" name=\\"receiver\\" elementType=\\"org.accordproject.organization.Organization\\" identifiedBy=\\"identifier\\">\\"Party B\\"</span> notifies <span class=\\"variable\\" name=\\"shipper\\" elementType=\\"org.accordproject.organization.Organization\\" identifiedBy=\\"identifier\\">\\"Party A\\"</span> in writing
that it is accepting the <span class=\\"variable\\" name=\\"deliverable\\" elementType=\\"String\\">\\"Widgets\\"</span>.</p>
<h2>Inspection and Notice.</h2>
<p><span class=\\"variable\\" name=\\"receiver\\" elementType=\\"org.accordproject.organization.Organization\\" identifiedBy=\\"identifier\\">\\"Party B\\"</span> will have <span class=\\"variable\\" name=\\"businessDays\\" elementType=\\"Long\\">10</span> Business Days to inspect and
evaluate the <span class=\\"variable\\" name=\\"deliverable\\" elementType=\\"String\\">\\"Widgets\\"</span> on the delivery date before notifying
<span class=\\"variable\\" name=\\"shipper\\" elementType=\\"org.accordproject.organization.Organization\\" identifiedBy=\\"identifier\\">\\"Party A\\"</span> that it is either accepting or rejecting the
<span class=\\"variable\\" name=\\"deliverable\\" elementType=\\"String\\">\\"Widgets\\"</span>.</p>
<h2>Acceptance Criteria.</h2>
<p>The \\"Acceptance Criteria\\" are the specifications the <span class=\\"variable\\" name=\\"deliverable\\" elementType=\\"String\\">\\"Widgets\\"</span>
must meet for the <span class=\\"variable\\" name=\\"shipper\\" elementType=\\"org.accordproject.organization.Organization\\" identifiedBy=\\"identifier\\">\\"Party A\\"</span> to comply with its requirements and
obligations under this agreement, detailed in <span class=\\"variable\\" name=\\"attachment\\" elementType=\\"String\\">\\"Attachment X\\"</span>, attached
to this agreement.</p>
</div>
<p>More text</p>
</div>
</body>
</html>"
`;

exports[`ciceromark <-> html converts acceptance.json to and from CiceroMark 2`] = `
"<html>
<body>
<div class=\\"document\\">
<h1>Heading</h1>
<p>And below is a <strong>clause</strong>.</p>
<div class=\\"clause\\" name=\\"deliveryClause\\" elementType=\\"org.accordproject.acceptanceofdelivery.AcceptanceOfDeliveryClause\\">
<h2>Acceptance of Delivery.</h2>
<p><span class=\\"variable\\" name=\\"shipper\\" elementType=\\"org.accordproject.organization.Organization\\" identifiedBy=\\"identifier\\">\\"Party A\\"</span> will be deemed to have completed its delivery obligations
if in <span class=\\"variable\\" name=\\"receiver\\" elementType=\\"org.accordproject.organization.Organization\\" identifiedBy=\\"identifier\\">\\"Party B\\"</span>'s opinion, the <span class=\\"variable\\" name=\\"deliverable\\" elementType=\\"String\\">\\"Widgets\\"</span> satisfies the
Acceptance Criteria, and <span class=\\"variable\\" name=\\"receiver\\" elementType=\\"org.accordproject.organization.Organization\\" identifiedBy=\\"identifier\\">\\"Party B\\"</span> notifies <span class=\\"variable\\" name=\\"shipper\\" elementType=\\"org.accordproject.organization.Organization\\" identifiedBy=\\"identifier\\">\\"Party A\\"</span> in writing
that it is accepting the <span class=\\"variable\\" name=\\"deliverable\\" elementType=\\"String\\">\\"Widgets\\"</span>.</p>
<h2>Inspection and Notice.</h2>
<p><span class=\\"variable\\" name=\\"receiver\\" elementType=\\"org.accordproject.organization.Organization\\" identifiedBy=\\"identifier\\">\\"Party B\\"</span> will have <span class=\\"variable\\" name=\\"businessDays\\" elementType=\\"Long\\">10</span> Business Days to inspect and
evaluate the <span class=\\"variable\\" name=\\"deliverable\\" elementType=\\"String\\">\\"Widgets\\"</span> on the delivery date before notifying
<span class=\\"variable\\" name=\\"shipper\\" elementType=\\"org.accordproject.organization.Organization\\" identifiedBy=\\"identifier\\">\\"Party A\\"</span> that it is either accepting or rejecting the
<span class=\\"variable\\" name=\\"deliverable\\" elementType=\\"String\\">\\"Widgets\\"</span>.</p>
<h2>Acceptance Criteria.</h2>
<p>The \\"Acceptance Criteria\\" are the specifications the <span class=\\"variable\\" name=\\"deliverable\\" elementType=\\"String\\">\\"Widgets\\"</span>
must meet for the <span class=\\"variable\\" name=\\"shipper\\" elementType=\\"org.accordproject.organization.Organization\\" identifiedBy=\\"identifier\\">\\"Party A\\"</span> to comply with its requirements and
obligations under this agreement, detailed in <span class=\\"variable\\" name=\\"attachment\\" elementType=\\"String\\">\\"Attachment X\\"</span>, attached
to this agreement.</p>
</div>
<p>More text</p>
</div>
</body>
</html>"
`;

exports[`ciceromark <-> html converts acceptance.json to and from CiceroMark 3`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "1",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Heading",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "And below is a ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Strong",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "clause",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": ".",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.ciceromark.Clause",
      "elementType": "org.accordproject.acceptanceofdelivery.AcceptanceOfDeliveryClause",
      "name": "deliveryClause",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Heading",
          "level": "2",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "Acceptance of Delivery.",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "elementType": "org.accordproject.organization.Organization",
              "identifiedBy": "identifier",
              "name": "shipper",
              "value": "\\"Party A\\"",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": " will be deemed to have completed its delivery obligations",
            },
            Object {
              "$class": "org.accordproject.commonmark.Softbreak",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "if in ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "elementType": "org.accordproject.organization.Organization",
              "identifiedBy": "identifier",
              "name": "receiver",
              "value": "\\"Party B\\"",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "'s opinion, the ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "elementType": "String",
              "name": "deliverable",
              "value": "\\"Widgets\\"",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": " satisfies the",
            },
            Object {
              "$class": "org.accordproject.commonmark.Softbreak",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "Acceptance Criteria, and ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "elementType": "org.accordproject.organization.Organization",
              "identifiedBy": "identifier",
              "name": "receiver",
              "value": "\\"Party B\\"",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": " notifies ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "elementType": "org.accordproject.organization.Organization",
              "identifiedBy": "identifier",
              "name": "shipper",
              "value": "\\"Party A\\"",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": " in writing",
            },
            Object {
              "$class": "org.accordproject.commonmark.Softbreak",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "that it is accepting the ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "elementType": "String",
              "name": "deliverable",
              "value": "\\"Widgets\\"",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": ".",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Heading",
          "level": "2",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "Inspection and Notice.",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "elementType": "org.accordproject.organization.Organization",
              "identifiedBy": "identifier",
              "name": "receiver",
              "value": "\\"Party B\\"",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": " will have ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "elementType": "Long",
              "name": "businessDays",
              "value": "10",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": " Business Days to inspect and",
            },
            Object {
              "$class": "org.accordproject.commonmark.Softbreak",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "evaluate the ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "elementType": "String",
              "name": "deliverable",
              "value": "\\"Widgets\\"",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": " on the delivery date before notifying",
            },
            Object {
              "$class": "org.accordproject.commonmark.Softbreak",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "elementType": "org.accordproject.organization.Organization",
              "identifiedBy": "identifier",
              "name": "shipper",
              "value": "\\"Party A\\"",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": " that it is either accepting or rejecting the",
            },
            Object {
              "$class": "org.accordproject.commonmark.Softbreak",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "elementType": "String",
              "name": "deliverable",
              "value": "\\"Widgets\\"",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": ".",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Heading",
          "level": "2",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "Acceptance Criteria.",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "The \\"Acceptance Criteria\\" are the specifications the ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "elementType": "String",
              "name": "deliverable",
              "value": "\\"Widgets\\"",
            },
            Object {
              "$class": "org.accordproject.commonmark.Softbreak",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "must meet for the ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "elementType": "org.accordproject.organization.Organization",
              "identifiedBy": "identifier",
              "name": "shipper",
              "value": "\\"Party A\\"",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": " to comply with its requirements and",
            },
            Object {
              "$class": "org.accordproject.commonmark.Softbreak",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "obligations under this agreement, detailed in ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "elementType": "String",
              "name": "attachment",
              "value": "\\"Attachment X\\"",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": ", attached",
            },
            Object {
              "$class": "org.accordproject.commonmark.Softbreak",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "to this agreement.",
            },
          ],
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "More text",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`ciceromark <-> html converts fixedinterest.json to and from CiceroMark 1`] = `
"<html>
<body>
<div class=\\"document\\">
<h2>Fixed rate loan</h2>
<p>This is a <em>fixed interest</em> loan to the amount of <span class=\\"variable\\" name=\\"loanAmount\\" format=\\"K0,0.00\\" elementType=\\"org.accordproject.money.MonetaryAmount\\">£100,000.00</span>
at the yearly interest rate of <span class=\\"variable\\" name=\\"rate\\" elementType=\\"Double\\">2.5</span>%
with a loan term of <span class=\\"variable\\" name=\\"loanDuration\\" elementType=\\"Integer\\">15</span>,
and monthly payments of <span class=\\"formula\\" name=\\"formula\\" code=\\"%20monthlyPaymentFormula(loanAmount%2Crate%2CloanDuration)%20as%20%22K0%2C0.00%22%20\\" dependencies=\\"%5B%5D\\"> eval( monthlyPaymentFormula(loanAmount,rate,loanDuration) as \\"K0,0.00\\" ) </span></p>
</div>
</body>
</html>"
`;

exports[`ciceromark <-> html converts fixedinterest.json to and from CiceroMark 2`] = `
"<html>
<body>
<div class=\\"document\\">
<h2>Fixed rate loan</h2>
<p>This is a <em>fixed interest</em> loan to the amount of <span class=\\"variable\\" name=\\"loanAmount\\" format=\\"K0,0.00\\" elementType=\\"org.accordproject.money.MonetaryAmount\\">£100,000.00</span>
at the yearly interest rate of <span class=\\"variable\\" name=\\"rate\\" elementType=\\"Double\\">2.5</span>%
with a loan term of <span class=\\"variable\\" name=\\"loanDuration\\" elementType=\\"Integer\\">15</span>,
and monthly payments of <span class=\\"formula\\" name=\\"formula\\" code=\\"%20monthlyPaymentFormula(loanAmount%2Crate%2CloanDuration)%20as%20%22K0%2C0.00%22%20\\" dependencies=\\"%5B%5D\\"> eval( monthlyPaymentFormula(loanAmount,rate,loanDuration) as \\"K0,0.00\\" ) </span></p>
</div>
</body>
</html>"
`;

exports[`ciceromark <-> html converts fixedinterest.json to and from CiceroMark 3`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "2",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Fixed rate loan",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is a ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Emph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "fixed interest",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " loan to the amount of ",
        },
        Object {
          "$class": "org.accordproject.ciceromark.FormattedVariable",
          "elementType": "org.accordproject.money.MonetaryAmount",
          "format": "K0,0.00",
          "name": "loanAmount",
          "value": "£100,000.00",
        },
        Object {
          "$class": "org.accordproject.commonmark.Softbreak",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "at the yearly interest rate of ",
        },
        Object {
          "$class": "org.accordproject.ciceromark.Variable",
          "elementType": "Double",
          "name": "rate",
          "value": "2.5",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "%",
        },
        Object {
          "$class": "org.accordproject.commonmark.Softbreak",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "with a loan term of ",
        },
        Object {
          "$class": "org.accordproject.ciceromark.Variable",
          "elementType": "Integer",
          "name": "loanDuration",
          "value": "15",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": ",",
        },
        Object {
          "$class": "org.accordproject.commonmark.Softbreak",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "and monthly payments of ",
        },
        Object {
          "$class": "org.accordproject.ciceromark.Formula",
          "code": " monthlyPaymentFormula(loanAmount,rate,loanDuration) as \\"K0,0.00\\" ",
          "dependencies": Array [],
          "name": "formula",
          "value": " eval( monthlyPaymentFormula(loanAmount,rate,loanDuration) as \\"K0,0.00\\" ) ",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`ciceromark <-> html converts latedelivery.json to and from CiceroMark 1`] = `
"<html>
<body>
<div class=\\"document\\">
<h2>Late Delivery and Penalty.</h2>
<p>In case of delayed delivery<span class=\\"conditional\\" name=\\"forceMajeure\\" whenTrue=\\" except for Force Majeure cases,\\" whenFalse=\\"\\"> except for Force Majeure cases,</span><span class=\\"variable\\" name=\\"partyId\\" elementType=\\"String\\">\\"Dan\\"</span> (the Seller) shall pay to <span class=\\"variable\\" name=\\"partyId\\" elementType=\\"String\\">\\"Steve\\"</span> (the Buyer) for every <span class=\\"variable\\" name=\\"amount\\" elementType=\\"Long\\">2</span> <span class=\\"variable\\" name=\\"unit\\" enumValues=\\"%5B%22seconds%22%2C%22minutes%22%2C%22hours%22%2C%22days%22%2C%22weeks%22%5D\\" elementType=\\"org.accordproject.time.TemporalUnit\\">days</span>
of delay penalty amounting to <span class=\\"variable\\" name=\\"penaltyPercentage\\" elementType=\\"Double\\">10.5</span>% of the total value of the Equipment
whose delivery has been delayed. Any fractional part of a <span class=\\"variable\\" name=\\"fractionalPart\\" enumValues=\\"%5B%22seconds%22%2C%22minutes%22%2C%22hours%22%2C%22days%22%2C%22weeks%22%5D\\" elementType=\\"org.accordproject.time.TemporalUnit\\">days</span> is to be
considered a full <span class=\\"variable\\" name=\\"fractionalPart\\" enumValues=\\"%5B%22seconds%22%2C%22minutes%22%2C%22hours%22%2C%22days%22%2C%22weeks%22%5D\\" elementType=\\"org.accordproject.time.TemporalUnit\\">days</span>. The total amount of penalty shall not however,
exceed <span class=\\"variable\\" name=\\"capPercentage\\" elementType=\\"Double\\">55.0</span>% of the total value of the Equipment involved in late delivery.
If the delay is more than <span class=\\"variable\\" name=\\"amount\\" elementType=\\"Long\\">15</span> <span class=\\"variable\\" name=\\"unit\\" enumValues=\\"%5B%22seconds%22%2C%22minutes%22%2C%22hours%22%2C%22days%22%2C%22weeks%22%5D\\" elementType=\\"org.accordproject.time.TemporalUnit\\">days</span>, the Buyer is entitled to terminate this Contract.</p>
</div>
</body>
</html>"
`;

exports[`ciceromark <-> html converts latedelivery.json to and from CiceroMark 2`] = `
"<html>
<body>
<div class=\\"document\\">
<h2>Late Delivery and Penalty.</h2>
<p>In case of delayed delivery<span class=\\"conditional\\" name=\\"forceMajeure\\" whenTrue=\\" except for Force Majeure cases,\\" whenFalse=\\"\\"> except for Force Majeure cases,</span><span class=\\"variable\\" name=\\"partyId\\" elementType=\\"String\\">\\"Dan\\"</span> (the Seller) shall pay to <span class=\\"variable\\" name=\\"partyId\\" elementType=\\"String\\">\\"Steve\\"</span> (the Buyer) for every <span class=\\"variable\\" name=\\"amount\\" elementType=\\"Long\\">2</span> <span class=\\"variable\\" name=\\"unit\\" enumValues=\\"%5B%22seconds%22%2C%22minutes%22%2C%22hours%22%2C%22days%22%2C%22weeks%22%5D\\" elementType=\\"org.accordproject.time.TemporalUnit\\">days</span>
of delay penalty amounting to <span class=\\"variable\\" name=\\"penaltyPercentage\\" elementType=\\"Double\\">10.5</span>% of the total value of the Equipment
whose delivery has been delayed. Any fractional part of a <span class=\\"variable\\" name=\\"fractionalPart\\" enumValues=\\"%5B%22seconds%22%2C%22minutes%22%2C%22hours%22%2C%22days%22%2C%22weeks%22%5D\\" elementType=\\"org.accordproject.time.TemporalUnit\\">days</span> is to be
considered a full <span class=\\"variable\\" name=\\"fractionalPart\\" enumValues=\\"%5B%22seconds%22%2C%22minutes%22%2C%22hours%22%2C%22days%22%2C%22weeks%22%5D\\" elementType=\\"org.accordproject.time.TemporalUnit\\">days</span>. The total amount of penalty shall not however,
exceed <span class=\\"variable\\" name=\\"capPercentage\\" elementType=\\"Double\\">55.0</span>% of the total value of the Equipment involved in late delivery.
If the delay is more than <span class=\\"variable\\" name=\\"amount\\" elementType=\\"Long\\">15</span> <span class=\\"variable\\" name=\\"unit\\" enumValues=\\"%5B%22seconds%22%2C%22minutes%22%2C%22hours%22%2C%22days%22%2C%22weeks%22%5D\\" elementType=\\"org.accordproject.time.TemporalUnit\\">days</span>, the Buyer is entitled to terminate this Contract.</p>
</div>
</body>
</html>"
`;

exports[`ciceromark <-> html converts latedelivery.json to and from CiceroMark 3`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "2",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Late Delivery and Penalty.",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "In case of delayed delivery",
        },
        Object {
          "$class": "org.accordproject.ciceromark.Conditional",
          "isTrue": true,
          "name": "forceMajeure",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": " except for Force Majeure cases,",
            },
          ],
          "whenFalse": Array [],
          "whenTrue": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": " except for Force Majeure cases,",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.ciceromark.Variable",
          "elementType": "String",
          "name": "partyId",
          "value": "\\"Dan\\"",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " (the Seller) shall pay to ",
        },
        Object {
          "$class": "org.accordproject.ciceromark.Variable",
          "elementType": "String",
          "name": "partyId",
          "value": "\\"Steve\\"",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " (the Buyer) for every ",
        },
        Object {
          "$class": "org.accordproject.ciceromark.Variable",
          "elementType": "Long",
          "name": "amount",
          "value": "2",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " ",
        },
        Object {
          "$class": "org.accordproject.ciceromark.EnumVariable",
          "elementType": "org.accordproject.time.TemporalUnit",
          "enumValues": Array [
            "seconds",
            "minutes",
            "hours",
            "days",
            "weeks",
          ],
          "name": "unit",
          "value": "days",
        },
        Object {
          "$class": "org.accordproject.commonmark.Softbreak",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "of delay penalty amounting to ",
        },
        Object {
          "$class": "org.accordproject.ciceromark.Variable",
          "elementType": "Double",
          "name": "penaltyPercentage",
          "value": "10.5",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "% of the total value of the Equipment",
        },
        Object {
          "$class": "org.accordproject.commonmark.Softbreak",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "whose delivery has been delayed. Any fractional part of a ",
        },
        Object {
          "$class": "org.accordproject.ciceromark.EnumVariable",
          "elementType": "org.accordproject.time.TemporalUnit",
          "enumValues": Array [
            "seconds",
            "minutes",
            "hours",
            "days",
            "weeks",
          ],
          "name": "fractionalPart",
          "value": "days",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " is to be",
        },
        Object {
          "$class": "org.accordproject.commonmark.Softbreak",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "considered a full ",
        },
        Object {
          "$class": "org.accordproject.ciceromark.EnumVariable",
          "elementType": "org.accordproject.time.TemporalUnit",
          "enumValues": Array [
            "seconds",
            "minutes",
            "hours",
            "days",
            "weeks",
          ],
          "name": "fractionalPart",
          "value": "days",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": ". The total amount of penalty shall not however,",
        },
        Object {
          "$class": "org.accordproject.commonmark.Softbreak",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "exceed ",
        },
        Object {
          "$class": "org.accordproject.ciceromark.Variable",
          "elementType": "Double",
          "name": "capPercentage",
          "value": "55.0",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "% of the total value of the Equipment involved in late delivery.",
        },
        Object {
          "$class": "org.accordproject.commonmark.Softbreak",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "If the delay is more than ",
        },
        Object {
          "$class": "org.accordproject.ciceromark.Variable",
          "elementType": "Long",
          "name": "amount",
          "value": "15",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " ",
        },
        Object {
          "$class": "org.accordproject.ciceromark.EnumVariable",
          "elementType": "org.accordproject.time.TemporalUnit",
          "enumValues": Array [
            "seconds",
            "minutes",
            "hours",
            "days",
            "weeks",
          ],
          "name": "unit",
          "value": "days",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": ", the Buyer is entitled to terminate this Contract.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts blockquote.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.BlockQuote",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "A quote.",
            },
          ],
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts blockquote.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<p>This is</p>
<blockquote><p>A quote.</p>
</blockquote>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts codeblock.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.CodeBlock",
      "text": "this is a multiline
code
block.
",
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts codeblock.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<pre class=\\"code_block\\"><code>this is a multiline
code
block.
</pre></code>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts codeblock-info.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.CodeBlock",
      "info": "<video src=\\"https://www.youtube.com/embed/dQw4w9WgXcQ\\"/>",
      "tag": Object {
        "$class": "org.accordproject.commonmark.TagInfo",
        "attributeString": "src = \\"https://www.youtube.com/embed/dQw4w9WgXcQ\\" ",
        "attributes": Array [
          Object {
            "$class": "org.accordproject.commonmark.Attribute",
            "name": "src",
            "value": "https://www.youtube.com/embed/dQw4w9WgXcQ",
          },
        ],
        "closed": true,
        "content": "",
        "tagName": "video",
      },
      "text": "  this is a multiline
  code

  containing a newline

  which should be handled by the video plugin.
",
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts codeblock-info.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<pre class=\\"code_block\\"><code data-ciceromark=\\"%3Cvideo%20src%3D%22https%3A%2F%2Fwww.youtube.com%2Fembed%2FdQw4w9WgXcQ%22%2F%3E\\">  this is a multiline
  code

  containing a newline

  which should be handled by the video plugin.
</pre></code>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts emph.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Emph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "some",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " text.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts emph.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<p>This is <em>some</em> text.</p>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts emph-strong.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Emph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Strong",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "some",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " text.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts emph-strong.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<p>This is <em><strong>some</strong></em> text.</p>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts h1.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "1",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Heading One",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts h1.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<h1>Heading One</h1>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts h2.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "2",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Heading Two",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts h2.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<h2>Heading Two</h2>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts h3.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "3",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Heading Three",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts h3.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<h3>Heading Three</h3>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts h4.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "4",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Heading Four",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts h4.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<h4>Heading Four</h4>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts h5.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "5",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Heading Five",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts h5.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<h5>Heading Five</h5>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts h6.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "6",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Heading Six",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts h6.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<h6>Heading Six</h6>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts html-inline.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is a ",
        },
        Object {
          "$class": "org.accordproject.commonmark.HtmlInline",
          "tag": Object {
            "$class": "org.accordproject.commonmark.TagInfo",
            "attributeString": "src = \\"property\\" ",
            "attributes": Array [
              Object {
                "$class": "org.accordproject.commonmark.Attribute",
                "name": "src",
                "value": "property",
              },
            ],
            "closed": false,
            "content": "",
            "tagName": "custom",
          },
          "text": "<custom src=\\"property\\"></custom>",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " property.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts html-inline.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<p>This is a <span class=\\"html_inline\\"><custom src=\\"property\\"></custom></span> property.</p>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts html-mixed.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "1",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Heading One",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.HtmlInline",
          "tag": Object {
            "$class": "org.accordproject.commonmark.TagInfo",
            "attributeString": "src = \\"https://www.youtube.com/embed/dQw4w9WgXcQ\\" ",
            "attributes": Array [
              Object {
                "$class": "org.accordproject.commonmark.Attribute",
                "name": "src",
                "value": "https://www.youtube.com/embed/dQw4w9WgXcQ",
              },
            ],
            "closed": false,
            "content": "",
            "tagName": "video",
          },
          "text": "<video src=\\"https://www.youtube.com/embed/dQw4w9WgXcQ\\"></video>",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "done.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts html-mixed.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<h1>Heading One</h1>
<p><span class=\\"html_inline\\"><video src=\\"https://www.youtube.com/embed/dQw4w9WgXcQ\\"></video></span></p>
<p>done.</p>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts inline-code.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Code",
          "text": "inline code",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": ".",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts inline-code.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<p>This is <code>inline code</code>.</p>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts link.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Link",
          "destination": "http://clause.io",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "a link",
            },
          ],
          "title": "",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": ".",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts link.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<p>This is <a href=\\"http://clause.io\\" title=>a link</a>.</p>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts multiline-html-block.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is a custom",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.HtmlBlock",
      "tag": Object {
        "$class": "org.accordproject.commonmark.TagInfo",
        "attributeString": "src = \\"property\\" ",
        "attributes": Array [
          Object {
            "$class": "org.accordproject.commonmark.Attribute",
            "name": "src",
            "value": "property",
          },
        ],
        "closed": false,
        "content": "
contents
",
        "tagName": "custom",
      },
      "text": "<custom src=\\"property\\">
contents
</custom>",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "block.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts multiline-html-block.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<p>This is a custom</p>
<pre class=\\"html_block\\"><code><custom src=\\"property\\">
contents
</custom></pre></code>
<p>block.</p>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts ol.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is an ordered list:",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.List",
      "delimiter": "period",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "one",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "two",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "three",
                },
              ],
            },
          ],
        },
      ],
      "start": "1",
      "tight": "false",
      "type": "ordered",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Done.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts ol.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<p>This is an ordered list:</p>

<ol delimiter=period start=1 tight=false>
<li><p>one</p>
</li>
<li><p>two</p>
</li>
<li><p>three</p>
</li></ol><p>Done.</p>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts ol-tight.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is an ordered list:",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.List",
      "delimiter": "period",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "one",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "two",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "three",
                },
              ],
            },
          ],
        },
      ],
      "start": "1",
      "tight": "true",
      "type": "ordered",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Done.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts ol-tight.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<p>This is an ordered list:</p>

<ol delimiter=period start=1 tight=true>
<li><p>one</p>
</li>
<li><p>two</p>
</li>
<li><p>three</p>
</li></ol><p>Done.</p>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts paragraphs.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is first paragraph.",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is second paragraph.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts paragraphs.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<p>This is first paragraph.</p>
<p>This is second paragraph.</p>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts strong.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Strong",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "some",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " text.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts strong.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<p>This is <strong>some</strong> text.</p>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts text.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is some text.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts text.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<p>This is some text.</p>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts thematicbreak.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.ThematicBreak",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "A footer.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts thematicbreak.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<p>This is</p>

<hr>
<p>A footer.</p>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts ul.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is an unordered list:",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.List",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "one",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "two",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "three",
                },
              ],
            },
          ],
        },
      ],
      "tight": "false",
      "type": "bullet",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Done.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts ul.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<p>This is an unordered list:</p>

<ul tight=false>
<li><p>one</p>
</li>
<li><p>two</p>
</li>
<li><p>three</p>
</li></ul><p>Done.</p>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts ul-tight.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is an unordered list:",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.List",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "one",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "two",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "three",
                },
              ],
            },
          ],
        },
      ],
      "tight": "true",
      "type": "bullet",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Done.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts ul-tight.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<p>This is an unordered list:</p>

<ul tight=true>
<li><p>one</p>
</li>
<li><p>two</p>
</li>
<li><p>three</p>
</li></ul><p>Done.</p>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts unwrapped <li> to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Hello",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Item",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "list item",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "World.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts unwrapped <li> to html 2`] = `
"Hello
-  list item

World."
`;
